k8-mainfest/postgres-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: django-gke
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
