k8-mainfest/ingress.yaml
# k8s/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: django-gke
  annotations:
    kubernetes.io/ingress.class: "gce"  # Use GKE ingress controller
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "django-cert"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
